--- a/localisation/emperor_estates_l_english.yml
+++ b/localisation/emperor_estates_l_english.yml
@@ -5,7 +5,7 @@
  estate_nobles_officer_corp:0 "$ESTATE_NAME$ in Officer Corps"
  estate_nobles_levies:0 "Increased Levies"
  estate_nobles_advisors:0 "Aristocratic Counselors"
- estate_nobles_right_of_counsel:0 "Right of Counsel"
+ estate_nobles_right_of_counsel:0 "Gunpowder Monopolies"
  estate_nobles_french_strong_duchies:0 "French Strong Duchies"
  estate_church_religious_state:0 "Religious State"
  estate_church_independent_inquisition:1 "Clerical Advisory Council"
