standardizing trade names

--- a/localisation/replace/gecko_trade_l_english.yml
+++ b/localisation/replace/gecko_trade_l_english.yml
@@ -1,56 +1,54 @@
 ﻿l_english:
  #Trade Nodes
- zambezi:0 "Zambezi"
  patagonia:0 "Patagonia"
  mexico:0 "Mexico"
  rio_grande:0 "Rio Grande"
  ohio:0 "Ohio"
  doab:0 "Doab"
  timbuktu:0 "Timbuktu"
- georgia:0 "Caucasus"
+ caucasus:0 "Caucasus"
  persia:0 "Persia"
- lahore_trade:0 "Samarkand"
+ samarkand:0 "Samarkand"
  aleppo:0 "Aleppo"
- basra:0 "Arabia"
- constantinople:0 "Anatolia"
- novgorod:0 "Moscow"
- astrakhan:0 "Astrakhan"
- siberia:0 "Siberia"
- kiev:0 "Kiev"
- kazan:0 "Kazan"
- laplata:0 "Rio de La Plata"
- brazil:0 "Brazil"
- amazonas_node:0 "Amazonas"
- ivory_coast:0 "Ivory Coast"
- zanzibar:0 "Zanzibar"
+ arabia:0 "Arabia"
  katsina:0 "Katsina"
  ethiopia:0 "Ethiopia"
- alexandria:0 "Alexandria"
+ rio_de_la_laplata:0 "Rio de La Plata"
+ brazil:0 "Brazil"
+ zanzibar:0 "Zanzibar"
+ cape_of_good_hope:0 "Cape of Good Hope"
+ ivory_coast:0 "Ivory Coast"
+ 
+ anatolia:0 "Anatolia"
+ siberia:0 "Siberia"
+ kazan:0 "Kazan"
+ astrakhan:0 "Astrakhan"
  crimea:0 "Crimea"
- krakow:0 "Krakow"
+ kiev:0 "Kiev"
+ moscow:0 "Moscow"
+ amazonas:0 "Amazonas"
+ alexandria:0 "Alexandria"
  panama:0 "Panama"
- carribean_trade:0 "Carribean"
- tunis:0 "Barbary Coast"
- genua:0 "Mediterranean"
- venice:0 "Adriatic"
- wien:0 "Danube"
+ carribean:0 "Carribean"
+ constantinople:0 "Constantinople"
+ adriatic:0 "Adriatic"
+ mediterranean:0 "Mediterranean"
+ barbary_coast:0 "Barbary Coast"
  saxony:0 "Saxony"
- gc_south_germany_tradenode:0 "Swabia"
- pest:0 "Pest"
+ danube:0 "Danube"
  rheinland:0 "Rheinland"
+ krakow:0 "Krakow"
+ vilnius:0 "Vilnius"
  chesapeake_bay:0 "Chesapeake Bay"
- st_lawrence:0 "Gulf of St. Lawrence"
+ gulf_of_st_lawrence:0 "Gulf of St. Lawrence"
+ novgorod:0 "Novgorod"
  north_sea:0 "North Sea"
  baltic_sea:0 "Baltic Sea"
- white_sea:0 "Novgorod"
  lubeck:0 "Lübeck"
- ragusa:0 "Thrace"
- valencia:0 "Valencia"
  sevilla:0 "Sevilla"
  bordeaux:0 "Bordeaux"
  champagne:0 "Champagne"
  english_channel:0 "English Channel"
- cape_of_good_hope:0 "Cape of Good Hope"
  #Trade Companies
  trade_company_south_africa:0 "South African Charter"
  TRADE_COMPANY_SOUTH_AFRICA_Root_Culture_GetName:0 "[Root.Culture.GetName] South Africa Company"
