--- a/localisation/replace/EU4_l_english.yml
+++ b/localisation/replace/EU4_l_english.yml
@@ -2398,10 +2398,10 @@ ab_manchu_banner_tt:0 "§G+50%§! Possible Manchu banners if available"
  SORT_UNITY:0 "Sort by the impact on religious unity converting this province will have."
  UNITY_IMPACT:0 "Converting $NAME$ will increase religious unity by $CHANGE$.\nIt currently increases it by $CURR|Y$."
  CONVERT:0 "Convert"
- CONVERT_SECONDARY:0 ""
+ CONVERT_SECONDARY:0 "Choose Syncretic Faith"
  NO_CONVERT_POSSIBLE:0 "§Y$RELIGION$§! is not allowed to convert to another religion."
- NO_POTENTIAL_RELIGION:0 ""
- NO_POTENTIAL_SECONDARY_RELIGION:0 ""
+ NO_POTENTIAL_RELIGION:0 "There are no potential religions to convert to right now."
+ NO_POTENTIAL_SECONDARY_RELIGION:0 "There are no potential Syncretic Faiths to choose right now."
  cb_defender_of_the_faith_desc:0 "They are not loyal to the true faith!"
  RELIGIUS_UNITY_LABEL_D:0 "It's always good to unite all your provinces under the same religion. Religious unity under 100% increases the local unrest and decreases your influence over the Papacy if your state religion is Catholicism."
  RELIG_PERFECT:0 "We have achieved religious unity in $COUNTRY$ and live in harmony!"
@@ -2412,7 +2412,7 @@ ab_manchu_banner_tt:0 "§G+50%§! Possible Manchu banners if available"
  HAVE_MORE_RELIGIUS_UNITY_THAN:0 "Have religious unity of at least "
  CV_IDEAS_PROGRESS:0 "You need to unlock §Y$NUM_IDEAS$§W more Idea(s) from any Idea group to unlock the next National Idea."
  CONVERT_TO:0 "Convert to $NAME$."
- CONVERT_TO_SECONDARY:0 ""
+ CONVERT_TO_SECONDARY:0 "Choose §Y$NAME$§! as Syncretic Faith."
  NEED_MONEY:0 "You need $MONEY$ gold."
  CANT_CLAIM_DEFENDER:0 "You can't claim the title because of the following reasons:"
  NEED_MORE_PRESTIGE_THAN_DEFENDER:0 "You need more prestige than the current defender."
