--- a/localisation/replace/gecko_prov_names_l_english.yml
+++ b/localisation/replace/gecko_prov_names_l_english.yml
@@ -1,4 +1,7 @@
 ﻿l_english:
+ PROV280:0 "Kyiv"
+ PROV1775:0 "Kiel"
+ PROV4370:0 "Cambridge"
  PROV5800:0 "Chegga"
  PROV5801:0 "Tindouf"
  PROV5802:0 "Sijilmasa"
