--- a/localisation/gecko_advisors_l_english.yml
+++ b/localisation/gecko_advisors_l_english.yml
@@ -19,3 +19,8 @@
  excellent_drill:0 "Excellent Drill"
  drillmaster_events.1.t:0 "$DRILLMASTER$"
  drillmaster_events.1.d:0 "One of our advisors, $DRILLMASTER$ has drilled our men to the pitch of military efficiency. Like a coiled spring we cannot maintain this high level for too long. Still, for a while our armies will stand where lesser men would run."
+
+ gc_banker:0 "Banker"
+ gc_banker_desc:0 "It is not from the benevolence of the butcher, the brewer, or the baker that we expect our dinner, but from their regard to their own interest."
+ gc_banker_boost:0 "Generous Terms Secured by Banker"
+ 
