--- a/localisation/gecko_general_l_english.yml
+++ b/localisation/gecko_general_l_english.yml
@@ -85,3 +85,5 @@
  geckomercvalue:0 "Number of Mercenaries"
  geckomercFL:0 "Mercenary Force Limit"
  fu_toob_benadir:0 "Toob Benadir Market"
+ french_vassal_title:0 "French Duchy"
+ french_vassal_title_plural:0 "French Duchies"
