--- a/localisation/gecko_missions_l_english.yml
+++ b/localisation/gecko_missions_l_english.yml
@@ -254,6 +254,8 @@ gc_build_army_mission_desc:0 ""
  hab_high_income_mission_desc:0 "We must increase state income by any means necessary. Money is a requirement for any endeavor of the state, from the daily expenses of the government to the maintenance of armies to invade our enemies."
  dlh_high_income_mission_title:0 "High Income"
  dlh_high_income_mission_desc:0 "We must increase state income by any means necessary. Money is a requirement for any endeavor of the state, from the daily expenses of the government to the maintenance of armies to invade our enemies."
+ swi_high_income_mission_title:0 "High Income"
+ swi_high_income_mission_desc:0 "We must increase state income by any means necessary. Money is a requirement for any endeavor of the state, from the daily expenses of the government to the maintenance of armies to invade our enemies."
 #france
 
  repulse_french_gank_title:0 "Defense of France"
@@ -420,7 +422,7 @@ gc_hungary_mission_40_desc:0 ""
 
 #Burgundy
 
-repulse_gank_bur_title:0 "Repulse the English"
+repulse_gank_bur_title:0 "Dreams of Independence"
 repulse_gank_bur_desc:0 ""
 
 #morocco
