--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -194,7 +194,8 @@
 lowland_integration:0 "Lowland Integration"
 defense_of_burgundy:0 "Repulse the English"
 gc_bur_realm_united_mod:0 "United Realm"
-
+charles_court_reorganisation:0 "Reorganised Court"
+charles_army_reorganisation:0 "Army Reorganised"
 #Swiss
 swabian_trade:0 "Swabian Trade"
 
