--- a/localisation/gecko_general_l_english.yml
+++ b/localisation/gecko_general_l_english.yml
@@ -87,3 +87,6 @@
  fu_toob_benadir:0 "Toob Benadir Market"
  french_vassal_title:0 "Ducal Prince"
  french_vassal_title_plural:0 "French Duchies"
+ french_vassal_is_our:0 "§Y$NAME$§! is our Ducal Vassal."
+ make_french_vassal_desc:0 "Make French Ducal Vassal"
+ PEACE_make_canton:0 "Become $TAKERS$ Ducal Vassal"
