--- a/localisation/FU_l_english.yml
+++ b/localisation/FU_l_english.yml
@@ -2301,7 +2301,7 @@ l_english:
  #Modifiers#
  swi_period_of_stability_modifier: "Period of Stability"
  swi_swiss_linen_industry_modifier: "Swiss Linen Industry"
- swi_swiss_cheese_modifier: "Swiss Cheese Production"
+ swi_swiss_cheese_modifier: "Swiss Iron Production"
  swi_direct_democracy_modifier: "Direct Democracy"
  swi_the_swiss_defense_modifier: "The Swiss Defense"
  swi_the_swiss_defense_modifier2: "The Swiss Defense"
