i have awoken. im looming

--- a/localisation/gecko_trade_l_english.yml
+++ b/localisation/gecko_trade_l_english.yml
@@ -6,7 +6,7 @@
  ohio:0 "Ohio"
  doab:0 "Doab"
  timbuktu:0 "Timbuktu"
- caucasus:0 "Caucasus"
+ baku:0 "Baku"
  persia:0 "Persia"
  samarkand:0 "Samarkand"
  aleppo:0 "Aleppo"
@@ -18,7 +18,6 @@
  zanzibar:0 "Zanzibar"
  cape_of_good_hope:0 "Cape of Good Hope"
  ivory_coast:0 "Ivory Coast"
- anatolia:0 "Anatolia"
  siberia:0 "Siberia"
  kazan:0 "Kazan"
  astrakhan:0 "Astrakhan"
