--- a/localisation/gecko_general_l_english.yml
+++ b/localisation/gecko_general_l_english.yml
@@ -85,8 +85,8 @@
  geckomercvalue:0 "Number of Mercenaries"
  geckomercFL:0 "Mercenary Force Limit"
  fu_toob_benadir:0 "Toob Benadir Market"
- french_vassal_title:0 "Ducal Prince"
- french_vassal_title_plural:0 "French Duchies"
- french_vassal_is_our:0 "§Y$NAME$§! is our Ducal Vassal."
- make_french_vassal_desc:0 "Make French Ducal Vassal"
- PEACE_make_french_vassal:0 "Become $TAKERS$ Ducal Vassal"
+ french_vassal_title:0 "Appanage"
+ french_vassal_title_plural:0 "Appanage"
+ french_vassal_is_our:0 "§Y$NAME$§! is our Appanage."
+ make_french_vassal_desc:0 "Make Appanage"
+ PEACE_make_french_vassal:0 "Make $TAKERS$ Appanage"
