--- a/localisation/H_l_english.yml
+++ b/localisation/H_l_english.yml
@@ -50,7 +50,6 @@
  # hashmp_provs_adj_l_english
  ############################################
  PROV_ADJ4958:0 "Aomori"
- PROV_ADJ4959:0 "Gariep"
  PROV_ADJ4960:0 "Karas"
  PROV_ADJ4961:0 "Kakamas"
  PROV_ADJ4962:0 "Cuoa"
@@ -64,14 +63,14 @@
  PROV_ADJ4970:0 "Segonyana"
  PROV_ADJ4971:0 "Vhembe"
  PROV_ADJ4972:0 "Lekwa"
- PROV_ADJ4973:0 "Nami-Nus"
+ #PROV_ADJ4973:0 "Nami-Nus"
  PROV_ADJ4974:0 "Kheis"
- PROV_ADJ4975:0 "Maputo"
+ #PROV_ADJ4975:0 "Maputo"
  ############################################
  # hashmp_provs_l_english
  ############################################
  PROV4958:0 "Aomori"
- PROV4959:0 "Gariep"
+
  PROV4960:0 "Karas"
  PROV4961:0 "Kakamas"
  PROV4962:0 "Cuoa"
@@ -85,6 +84,6 @@
  PROV4970:0 "Segonyana"
  PROV4971:0 "Vhembe"
  PROV4972:0 "Lekwa"
- PROV4973:0 "Nami-Nus"
+ #PROV4973:0 "Nami-Nus"
  PROV4974:0 "Kheis"
- PROV4975:0 "Maputo"
+ #PROV4975:0 "Maputo"
