--- a/localisation/gecko_general_l_english.yml
+++ b/localisation/gecko_general_l_english.yml
@@ -67,7 +67,7 @@
  crimean_raids:0 "Crimean Raids"
  h_swedish_armies:0 "Lion of the North"
  h_swedish_armies_desc:0 "Gustavus Adolphus would go on to lead Sweden to victory in numerous wars and battles, while also setting in motion the rise of Sweden after his death. He is credited for being the 'father of modern warfare' and is regarded as one of the greatest military commanders in modern history."
- gc_take_influence_ideas_for_marches:0 "Has Marcher Lord unlocked in Influence Ideas or vassal of over 300 total Development"
+ gc_take_influence_ideas_for_marches:0 "Unlock the Marcher Lord in Influence Ideas or increase the vassal's development to over 300."
  ANNEX_TOO_LOW:0 "Your vassal needs to have at least §Y+100§! opinion of you for you to be able to start an annexation."
  tooltip_development_30:0 "European 30 development province"
  tooltip_thrace_area:0 "Province in the Thrace Area"
