development counter added

--- a/localisation/gecko_decisions_l_english.yml
+++ b/localisation/gecko_decisions_l_english.yml
@@ -55,6 +55,7 @@
  gecko_debt_desc:0 "Attempt to lessen the debt burden faced by our country. This will stand down our armies for the duration."
  gecko_debt_2_title:0 "Cease Debt Repayments"
  gecko_debt_2_desc:0 "Refocus our economy away from debt repayments."
+ recover_economy_tt:0 "You will be able to §Yremove§! this modifier after §Y5 years§! as long as you are §RNOT§! running a deficit."
  splendor_mercs_title:0 "Enlist Mercenaries"
  splendor_mercs_desc:0 "Due to our splendor, we can attract mercenaries previous unavailable to us."
  establish_imperial_guard_title:0 "Reform the Imperial Guard"
@@ -71,6 +72,12 @@
  estate_rebalance_dhimmi_desc:0 ""
  allow_estate_rebalance_title:0 "§GGrant Land to Estates§!"
  allow_estate_rebalance_desc:0 "Spend the resources of the State to change the influence our Estates have over the nation."
+ development_check_decision_title:0 "§TCheck Development Clicks§!"
+ development_check_decision_desc:0 ""
+ total_dev_clicks_check_ct:0 "Total Dev Clicks §Y[Root.DevelopmentClicksVariable.GetValue]§!"
+ total_adm_clicks_check_ct:0 "Adm Clicks §Y[Root.AdmClicksVariable.GetValue]§!"
+ total_dip_clicks_check_ct:0 "Dip Clicks §Y[Root.DipClicksVariable.GetValue]§!"
+ total_mil_clicks_check_ct:0 "Mil Clicks §Y[Root.MilClicksVariable.GetValue]§!"
  #gecko critial events
  GC_infantry_leader_cooldown_tooltip:0 "Infantry Leader"
  GC_cavalry_leader_cooldown_tooltip:0 "Cavalry Leader"
