--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -284,7 +284,7 @@
  ab_portugal_colonial_growth:0 "Portuguese Colonial Growth"
  ab_denmark_reduced_lib_desire:0 "Hanseatic Shipyards"
  ab_venice_ship_trade:0 "Condottieri"
- ab_allow_religion_enforced:0 "Religion Enforced Edict"
+ ab_allow_religion_enforced:0 "Colonial Administration"
  ab_culture_cost:0 "Improved Culture Conversion"
  ab_cheaper_enforce_religion:0 "Easier Force Conversion"
  ab_placed_merchants:0 "Stronger Merchants"
