--- a/localisation/gecko_decisions_l_english.yml
+++ b/localisation/gecko_decisions_l_english.yml
@@ -55,7 +55,7 @@
  gecko_debt_desc:0 "Attempt to lessen the debt burden faced by our country. This will stand down our armies for the duration."
  gecko_debt_2_title:0 "Cease Debt Repayments"
  gecko_debt_2_desc:0 "Refocus our economy away from debt repayments."
- recover_economy_tt:0 "You will be able to §Yremove§! this modifier after §Y5 years§! as long as you are §RNOT§! running a deficit."
+ recover_economy_tt:0 "You will be able to §Yremove§! this modifier as long as you are §RNOT§! running a deficit."
  splendor_mercs_title:0 "Enlist Mercenaries"
  splendor_mercs_desc:0 "Due to our splendor, we can attract mercenaries previous unavailable to us."
  establish_imperial_guard_title:0 "Reform the Imperial Guard"
@@ -124,8 +124,8 @@ splendor_mercs_1_desc:0 "Allows further Mercenary recruitment to Mercenary Force
 splendor_mercs_2_title:0 "§Y2. Hire Further Mercenaries§!"
 splendor_mercs_2_desc:0 "Hire Mercenaries in bulk."
 
-Show_Merc_limit_title:0 "§Y1. Mercenary Force Limit: ([Root.geckomercvalue.GetValue]/[Root.geckomercFL.GetValue])§!"
-Show_Merc_limit_desc:0 "This is our Mercenary Force Limit. If we go over this, any newly created Mercenary Company will be disbanded with no refund."
+Show_Merc_limit_title:0 "§Y1. Mercenary Force Limit§!"
+Show_Merc_limit_desc:0 "This is our Mercenary Force Limit. If we go over this, our Mercenaries will become unsustainably expensive."
 gecko_merc_limit_tt:0 "Manually Update Mercenary Forcelimit"
 gecko_increased_merc_limit_tt:0 "This will §GIncrease our Available Mercenaries by +15%§!, but they will have -§R15.0% Morale§! for 10 Years."
 gecko_decreased_merc_limit_tt:0 "This will §RDecrease our Available Mercenaries by -15%§!, but they will have +§G10.0% Combat Ability§! for 10 Years."
