--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -191,37 +191,37 @@
  hun_royal_town:0 "Royal Free Town"
 
 #Burgundy
-lowland_integration:0 "Lowland Integration"
-defense_of_burgundy:0 "Repulse the English"
-gc_bur_realm_united_mod:0 "United Realm"
-charles_court_reorganisation:0 "Reorganised Court"
-charles_army_reorganisation:0 "Army Reorganised"
+ lowland_integration:0 "Lowland Integration"
+ defense_of_burgundy:0 "Repulse the English"
+ gc_bur_realm_united_mod:0 "United Realm"
+ charles_court_reorganisation:0 "Reorganised Court"
+ charles_army_reorganisation:0 "Army Reorganised"
 #Swiss
-swabian_trade:0 "Swabian Trade"
+ swabian_trade:0 "Swabian Trade"
 
-too_many_subjects:0 "Too Many Subjects"
-too_many_subjects_influence:0 "Too Many Subjects - Influence Ideas"
+ too_many_subjects:0 "Too Many Subjects"
+ too_many_subjects_influence:0 "Too Many Subjects - Influence Ideas"
 
 #Critical Province
-critical_province:0 "Critical Province"
+ critical_province:0 "Critical Province"
 
-gecko_b:0 "Recent Bankruptcy"
-gecko_debt_tackled:0 "Economic Recovery"
-gecko_debt_tackled_2:0 "Slowed Military Build-up"
+ gecko_b:0 "Recent Bankruptcy"
+ gecko_debt_tackled:0 "Economic Recovery"
+ gecko_debt_tackled_2:0 "Slowed Military Build-up"
 
-gc_mongol_rule_tibet:0 "Mongol Rule of Tibet"
+ gc_mongol_rule_tibet:0 "Mongol Rule of Tibet"
 
-X_full_state_prosperity_pmod:0 "Conquer Full State for Prosperity Growth"
-emperor_renovatio_emperor:0 "Renovatio Imperii"
-gecko_development:0 "Internal Development"
-African_Slave_Trade:0 "African Slave Trade"
-Control_African_Slave_Trade:0 "Full Control of African Slave Trade"
-African_Gold_Monopoly:0 "African Gold Monopoly"
-African_Gold:0 "African Gold"
-African_Slave_Trade_Western:0 "African Slave Trade"
-iberian_trade:0 "Iberian Trade"
-Defense_of_the_Rus:0 "Defense of the Rus"
-Ahead_of_time:0 "Ahead of Time"
+ X_full_state_prosperity_pmod:0 "Conquer Full State for Prosperity Growth"
+ emperor_renovatio_emperor:0 "Renovatio Imperii"
+ gecko_development:0 "Internal Development"
+ African_Slave_Trade:0 "African Slave Trade"
+ Control_African_Slave_Trade:0 "Full Control of African Slave Trade"
+ African_Gold_Monopoly:0 "African Gold Monopoly"
+ African_Gold:0 "African Gold"
+ African_Slave_Trade_Western:0 "African Slave Trade"
+ iberian_trade:0 "Iberian Trade"
+ Defense_of_the_Rus:0 "Defense of the Rus"
+ Ahead_of_time:0 "Ahead of Time"
 russian_consolidation:0 "Russian Consolidation"
 gecko_ipa:0 "Favourable Lending Terms"
 gecko_tackle_debt_timer_2:0 "Economic Recovery"
@@ -258,6 +258,8 @@ gc_west_african_integration:0 "West African Integration"
 
 #sweden
 gc_swe_hakkapeliitta:0 "Hakkapeliitta"
+
+Standing_Army:0 "Standing Army"
 
 ######province modifiers######
  northern_dvina_estuary_modifier:0 "Northern Dvina Estuary"
