Decisions bundled into giga decision

--- a/localisation/gecko_decisions_l_english.yml
+++ b/localisation/gecko_decisions_l_english.yml
@@ -70,6 +70,10 @@
  estate_rebalance_burghers_desc:0 ""
  estate_rebalance_dhimmi_title:0 "§GGrant Land to the Dhimmi§!"
  estate_rebalance_dhimmi_desc:0 ""
+ show_extra_decisions_title:0:"§TShow Extra Decisions§!"
+ show_extra_decisions_desc:0 ""
+ hide_extra_decisions_title:0"§THide Extra Decisions§!"
+ hide_extra_decisions_desc:0 ""
  allow_estate_rebalance_title:0 "§GGrant Land to Estates§!"
  allow_estate_rebalance_desc:0 "Spend the resources of the State to change the influence our Estates have over the nation."
  development_check_decision_title:0 "§TCheck Development Clicks§!"
