Decision added to show manufactories without a workshop buidling

--- a/localisation/gecko_decisions_l_english.yml
+++ b/localisation/gecko_decisions_l_english.yml
@@ -18,16 +18,10 @@
  prepare_for_holy_war_desc:0 "The clouds are tinged with mud and sand as the enemies of our faith march ever closer to our borders. Fortunately, we are not the only ones to notice it, warriors flock to our banners as the potential new Ghazis flood into the country. Let us fill our mosques and battle ranks with these veteran warriors of the faith."
  enlist_rajputs_title:0 "Enlist Rajputs"
  enlist_rajputs_desc:0 "Rajputs, one of the 4 Varnas of our society, have always led the political authority of the preceding states in the region. Though their religions are numerous thanks to the missionary works of Muslim Traders and Therevada Buddhists, their ancestral tribes and ties still bind them to one another. Let us ignore their religious differences and instead fuel our armies with this warrior class."
- crimea_form_the_hetmanate_title:0 "Unite the Steppes"
- crimea_form_the_hetmanate_desc:0 "Centuries ago our Great Father united our ancestors in their ancient homeland. He died leaving his sons to squabble and split his mighty empire into petty fiefs, small, weak and unworthy of his legacy! The disjointed remnants still sweep across the steppes instilling fear in the hearts of his enemies just like the Great Mongol army once did.\nNo more! A worthy people still carrying the banner of his legacy ride across these lands! While we now bow before a new God, the blood of Genghis Khan still flows through our veins. We are the heirs of Genghis and we are coming for what is rightfully ours!"
  gc_war_taxes_notification_title:0 "§RWAR TAXES ARE ON§!"
  gc_war_taxes_notification_desc:0 "You are paying War Taxes. You might want to deactivate them."
- great_zimbabwe_title:0 "Proclaim Great Zimbabwe"
- great_zimbabwe_desc:0 "We must unite East Africa and proclaim Great Zimbabwe."
  free_colonist_title:0 "Settle the World"
  free_colonist_desc:0 "Recent discoveries have lead to a great demand for Crown sponsored colonies."
- force_urbanisation_title:0 "Force Urbanisation"
- force_urbanisation_desc:0 "Although our state is developing at a pleasing rate, it could be faster. We could focus all our resources into centralising the state. However diverting funding away from the army will have its consequences.."
  urbanisation:0 "Golden Age (Economic)"
  urbanisation_title:0 "Golden Age (Economic)"
  urbanisation_desc:0 "50 years of reduced power cost, increased goods produced and cheaper construction cost. No longer part of the normal Golden Age ability."
@@ -35,14 +29,6 @@
  sm_hire_recruitmaster_desc:0 "It would be wise to use the foreign expertise available to us to help bring fresh manpower into our ranks."
  sm_hire_naval_reformer_title:0 "§OHire a Naval Reformer§!"
  sm_hire_naval_reformer_desc:0 "Hire a naval expert to reform our navies."
- PR_manpower_edict_title:0 "§RNational Manpower Edict§!"
- PR_manpower_edict_desc:0 "Activate a manpower edict modifier in all states without an activated edict. No edicts can be applied to states with this modifier. Can be removed in 1 year."
- PR_manpower_edict_tooltip:0 "+§Y25%§! Manpower and +§R200%§! State Maintenance in all states without an active edict"
- PR_manpower_edict_removal_title:0 "§RDeactivate National Manpower Edict§!"
- PR_manpower_edict_removal_desc:0 "Removes manpower edict modifier from all provinces."
- PR_manpower_edict_cooldown:0 "Provincial Manpower Edict"
- PR_manpower_edict_removal_tooltip:0 "Has been 1 year since activating National Manpower Edict."
- PR_manpower_edict_province:0 "Provincial Manpower Edict"
  timurid_nation_title:0 "Reform the Timurid Empire"
  mamluks_subjugated:0 "Mamluks Subjugated"
  subjugate_mamluks_title:0 "Subjugate Mamluks"
@@ -56,10 +42,6 @@
  gecko_debt_2_title:0 "Cease Debt Repayments"
  gecko_debt_2_desc:0 "Refocus our economy away from debt repayments."
  recover_economy_tt:0 "You will be able to §Yremove§! this modifier as long as you are §RNOT§! running a deficit."
- splendor_mercs_title:0 "Enlist Mercenaries"
- splendor_mercs_desc:0 "Due to our splendor, we can attract mercenaries previous unavailable to us."
- establish_imperial_guard_title:0 "Reform the Imperial Guard"
- establish_imperial_guard_desc:0 ""
  estate_rebalance_nobles_title:0 "§GGrant Land to the Nobility§!"
  estate_rebalance_nobles_desc:0 ""
  estate_rebalance_tribes_title:0 "§GGrant Land to the Tribes§!"
@@ -70,9 +52,9 @@
  estate_rebalance_burghers_desc:0 ""
  estate_rebalance_dhimmi_title:0 "§GGrant Land to the Dhimmi§!"
  estate_rebalance_dhimmi_desc:0 ""
- show_extra_decisions_title:0:"§TShow Extra Decisions§!"
+ show_extra_decisions_title:0 "§T1.Show Extra Decisions§!"
  show_extra_decisions_desc:0 ""
- hide_extra_decisions_title:0"§THide Extra Decisions§!"
+ hide_extra_decisions_title:0 "§T1.Hide Extra Decisions§!"
  hide_extra_decisions_desc:0 ""
  allow_estate_rebalance_title:0 "§GGrant Land to Estates§!"
  allow_estate_rebalance_desc:0 "Spend the resources of the State to change the influence our Estates have over the nation."
@@ -82,6 +64,17 @@
  total_adm_clicks_check_ct:0 "Adm Clicks §Y[Root.AdmClicksVariable.GetValue]§!"
  total_dip_clicks_check_ct:0 "Dip Clicks §Y[Root.DipClicksVariable.GetValue]§!"
  total_mil_clicks_check_ct:0 "Mil Clicks §Y[Root.MilClicksVariable.GetValue]§!"
+ X_estate_church_province_control_decision_title:0 "Show Provinces under Church Control"
+ X_estate_church_province_control_decision_desc:0 ""
+ X_estate_burghers_province_control_decision_title:0 "Show Provinces under Burgher Control"
+ X_estate_burghers_province_control_decision_desc:0 ""
+ X_estate_nobles_province_control_decision_title:0 "Show Provinces under Church Control"
+ X_estate_nobles_province_control_decision_desc:0 ""
+ X_estate_dhimmi_province_control_decision_title:0 "Show Provinces under Dhimmi Control"
+ X_estate_dhimmi_province_control_decision_desc:0 ""
+ X_expanded_infra_decision_title:0 "Show Provinces with Expanded Infrastructure"
+ X_expanded_infra_decision_desc:0 ""
+ Show_manus_title:0 "Show Manufactories without a Workshop Building"
  #gecko critial events
  GC_infantry_leader_cooldown_tooltip:0 "Infantry Leader"
  GC_cavalry_leader_cooldown_tooltip:0 "Cavalry Leader"
@@ -98,10 +91,6 @@
  gc_restore_roman_empire_as_pope_title:0 "Empire of God"
  gc_restore_roman_empire_as_pope_desc:0 "The Roman Empire, probably one of the greatest Empires to ever exist, must be reunited under Gods oversight. We will reclaim what is rightfully Christian and drive off the Heathens occupying these lands."
 
-#mongolia
-
-reunite_mongols_title:0 "Reunite Mongols"
-reunite_mongols_desc:0 ""
 
 #persia
 
@@ -122,8 +111,6 @@ gc_hungary_change_paths_1_tooltip:0 "This will allow us to pursue our claims in 
 gc_hungary_change_paths_2_tooltip:0 "This will allow us to pursue our interests in Anatolia. However we will abandon our claims in Europe."
 
 #mercs
-splendor_mercs_1_title:0 "§Y3. Recruit Surplus Mercenaries§!"
-splendor_mercs_1_desc:0 "Allows further Mercenary recruitment to Mercenary Forcelimit."
 
 splendor_mercs_2_title:0 "§Y2. Hire Further Mercenaries§!"
 splendor_mercs_2_desc:0 "Hire Mercenaries in bulk."
