--- a/localisation/gecko_decisions_l_english.yml
+++ b/localisation/gecko_decisions_l_english.yml
@@ -68,7 +68,7 @@
  X_estate_church_province_control_decision_desc:0 ""
  X_estate_burghers_province_control_decision_title:0 "Show Provinces under Burgher Control"
  X_estate_burghers_province_control_decision_desc:0 ""
- X_estate_nobles_province_control_decision_title:0 "Show Provinces under Church Control"
+ X_estate_nobles_province_control_decision_title:0 "Show Provinces under Nobles Control"
  X_estate_nobles_province_control_decision_desc:0 ""
  X_estate_dhimmi_province_control_decision_title:0 "Show Provinces under Dhimmi Control"
  X_estate_dhimmi_province_control_decision_desc:0 ""
