milan buffs and some balance

--- a/localisation/loadingtips_l_english.yml
+++ b/localisation/loadingtips_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
  LOADING_TIP_0:0 "Don't feed the Dog."
- LOADING_TIP_1:0 "Playing Gecko 7 days a week is not a replacement for therapy."
+ LOADING_TIP_1:0 "I don't know how to fix hotjoin."
  LOADING_TIP_2:0 "Yenik broke the mod again"
  LOADING_TIP_3:0 "House Gecko sends their regards"
  LOADING_TIP_4:0 "Funni Funni?"
