--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -125,6 +125,7 @@
  gc_fra_paper_industry:0 "Expansion of the Printing Press"
  gc_land_reform:0 "Land Reform"
  gc_french_development:0 "Urbanisation"
+ gc_milanese_development:0 "Urbanisation"
  defense_of_france:0 "Defense of France"
 
 
