production hub decision added

--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -278,4 +278,7 @@ Standing_Army:0 "Standing Army"
  gc_Letat_cest_moi:0 "L'Etat, c'est moi"
  trade_hub_created_in_province:0 "Trade Hub Created in Province"
  trade_hub_created:0 "Trade Hub Created"
+ trade_hub_created_in_province_grain:0 "Production Hub"
+ trade_hub_created_in_province_naval_supplies:0 "Production Hub"
+ trade_hub_created_in_province_livestock:0 "Production Hub"
  gc_african_gold_modifier:0 "African Gold"
