--- a/localisation/gecko_powers_and_ideas_l_english.yml
+++ b/localisation/gecko_powers_and_ideas_l_english.yml
@@ -3,5 +3,4 @@
  maritime_ideas_bonus:0 "Full Humanist"
  gc_compagnies_ordonnance:0 "The Compagnies d'Ordonnance"
  gc_compagnies_ordonnance_desc:0 "Originally created by the French Monarchy to regularize the recruitment of troops. If we bring this into Burgundy, we will streamline the recruitment of troops. §G+10% Available Mercenaries§!"
- gc_tradition_of_payment:0 "Tradition of Payment"
- gc_tradition_of_payment_desc:0 "There is always the temptation to be just a few days late with payments to mercenaries, after all you never know what sudden expenses might come along. We will not do that, we will pay our mercenaries exactly on time and mercenary captains will know this and remember this. §G+10% Available Mercenaries§!"
+ gc_mass_army_desc:0 "We have, up to now, been very choosy over who should serve as a ranker in our military. We only took the poorest and most desperate, basically the people no one else would miss. Now though we are going to open up the ranks to everyone, who isn't rich. §G+10% Available Mercenaries§!"
