--- a/localisation/gecko_events_l_english.yml
+++ b/localisation/gecko_events_l_english.yml
@@ -197,9 +197,14 @@
  gecko_crimea_mission.2.a:0 "The future is bright."
 
 #trade centre
+gecko.42.t:0 "A Production Hub!"
+gecko.42.d:0 "After some deliberations, our merchants have successfully made $PROVINCE$ a production hub."
+gecko.42.a:0 "Good."
+gecko.42.b:0 "Do Nothing."
+
 gecko.43.t:0 "A New Center of Trade!"
 gecko.43.d:0 "After some deliberations, our merchants have successfully made $PROVINCE$ a center of trade."
-gecko.43.a:0 "Good."
+gecko.43.a:0 "Good.
 
 #morocco tunis
 
