EOH ideas fixed and properly apply now

--- a/localisation/gecko_ideas_l_english.yml
+++ b/localisation/gecko_ideas_l_english.yml
@@ -150,3 +150,9 @@
  arb_6_desc:0 "There aren't many sharply-delineated man-made borders in Arabia, and even if there were, the Bedouin would ignore them. Though the Bedouin nomadic journeys through our lands and into others has risks, it also facilitates easy access to trade through the entire region, as Bedouin nomads know no import tariffs or trade embargoes."
  arb_7:0 "Arabia"
  arb_7_desc:0 "Although Arabia has many different clans, tribes and countries, all share in the use of the Arabic language, it forms the unifying feature of all Arabs. Under a strong leadership we can unite all Arabian lands under a single flag and one ruler."
+
+#EOH
+
+gc_reformed_coinage:0 "Reformed Coinage"
+gc_bulwark_of_christianity:0 "Bulwark of Christianity"
+gc_hun_renaissanse_knowledge:0 "A Renaissance Prince"
