--- a/localisation/gecko_ideas_l_english.yml
+++ b/localisation/gecko_ideas_l_english.yml
@@ -154,5 +154,8 @@
 #EOH
 
 gc_reformed_coinage:0 "Reformed Coinage"
+gc_reformed_coinage_desc:0 ""
 gc_bulwark_of_christianity:0 "Bulwark of Christianity"
+gc_bulwark_of_christianity_desc:0 ""
 gc_hun_renaissanse_knowledge:0 "A Renaissance Prince"
+gc_hun_renaissanse_knowledge_desc:0 ""
