--- a/localisation/gecko_events_l_english.yml
+++ b/localisation/gecko_events_l_english.yml
@@ -204,7 +204,7 @@ gecko.42.b:0 "Do Nothing."
 
 gecko.43.t:0 "A New Center of Trade!"
 gecko.43.d:0 "After some deliberations, our merchants have successfully made $PROVINCE$ a center of trade."
-gecko.43.a:0 "Good.
+gecko.43.a:0 "Good."
 
 #morocco tunis
 
